[workspace]
members = [
    "contracts/voting-escrow",
    "contracts/connector-alliance",
    "contracts/global-config",
    # "contracts/connector-emission",
    "contracts/asset-staking",
    "contracts/asset-gauge",
    # "contracts/bribe-manager",
    # "contracts/bribe-distribution",
    "packages/*",
]

[workspace.package]
version = "1.0.0"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2021"
license       = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-ve3"
homepage      = "https://www.erisprotocol.com"
documentation = "https://docs.erisprotocol.com/"
keywords      = ["eris", "cosmos", "cosmwasm"]

[profile.release.package.ve3-shared]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true

[workspace.dependencies]
cw2 = "1.1"
cw20 = "1.1"
cw20-base = "1.1"
cw721 = { version = "0.18.0" }
cw721-base = { version = "0.18.0", features = ["library"] }
cosmwasm-std = "1.5"
cosmwasm-schema = "1.5"
cw-storage-plus = { version = "1.2", features = ["iterator"]}
cw-asset = "3.1"
cw-ownable = "0.5"
cw-ownable-derive = "0.5"
cw-utils = "1.0"
thiserror = "1.0"
anyhow = "1"
proptest = "1.0"
schemars = "0.8"
semver = "1.0"
serde = "1.0"


ve3-shared = { path = "packages/ve3-shared"}
ve3-global-config = { path = "contracts/global-config", features = ['library']}