[workspace]
members = [
    "contracts/voting-escrow",
    "contracts/connector-alliance",
    "contracts/phoenix-treasury",
    "contracts/connector-emission",
    "contracts/global-config",
    "contracts/asset-staking",
    "contracts/asset-gauge",
    "contracts/bribe-manager",
    "contracts/zapper",
    "packages/*",
]
resolver = "2"

[workspace.package]
version = "1.2.0"
authors = ["devs <devs@erisprotocol.com>"]
edition = "2021"
license       = "GPL-3.0-or-later"
repository = "https://github.com/erisprotocol/contracts-ve3"
homepage      = "https://www.erisprotocol.com"
documentation = "https://docs.erisprotocol.com/"
keywords      = ["eris", "cosmos", "cosmwasm"]


[profile.release.package.ve3-shared]
opt-level = 3
debug = false
debug-assertions = false
codegen-units = 1
incremental = false

[profile.release]
rpath = false
lto = true
overflow-checks = true

[workspace.dependencies]
cw2 = "1.1"
cw20 = "1.1"
cw20-base = "1.1"
cw721 = { version = "0.18.0" }
cw721-base = { version = "0.18.0", features = ["library"] }
cosmwasm-std = { version = "1.5", features = ["cosmwasm_1_1"]}
cosmwasm-schema = "1.5"
cw-storage-plus = { version = "1.2", features = ["iterator"]}
cw-asset = "3.1"
cw-address-like = "1.0.4"
cw-ownable = "0.5"
cw-ownable-derive = "0.5"
cw-utils = "1.0"
thiserror = "1.0"
anyhow = "1"
proptest = "1.0"
schemars = "0.8"
semver = "1.0"
serde = { version = "1.0", features = ["derive"]}
itertools = "0.10"

protobuf = "=3.2.0"

# All for tokenfactory
osmosis-std-derive = "0.13.2"
prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}
prost-types = {version = "0.11.1", default-features = false}

ve3-shared = { path = "packages/ve3-shared"}