[package]
name = "ve3-asset-gauge"
version = "1.0.0"
authors = ["devs <devs@erisprotocol.com>"]
repository = "https://github.com/erisprotocol/contracts-ve3"
edition = "2021"

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2.workspace = true
cw20.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true

