[package]
name = "ve3-asset-gauge"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]

[dependencies]
cw2.workspace = true
cw20.workspace = true
cosmwasm-std.workspace = true
cw-storage-plus.workspace = true
cw-asset.workspace = true
thiserror.workspace = true
cosmwasm-schema.workspace = true
ve3-shared.workspace = true
itertools.workspace = true