[package]
name = "ve3-connector-emissions"
version = "1.0.0"
authors = ["devs <devs@erisprotocol.com>"]
repository = "https://github.com/erisprotocol/contracts-ve3"
edition = "2021"

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cosmwasm-std = { workspace = true, features = ["stargate"] }
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
cw-asset.workspace = true
schemars.workspace = true
serde = { workspace = true, features = ["derive"] }
thiserror.workspace = true
shared.workspace = true
semver.workspace = true

cw2.workspace = true
cw20.workspace = true
cw20-base.workspace = true
cw-utils.workspace = true
