[package]
name = "ve3-connector-emission"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

exclude = [
  "contract.wasm",
  "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2.workspace = true
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
cw-asset.workspace = true
cw-ownable.workspace = true
cw-ownable-derive.workspace = true
thiserror.workspace = true
ve3-shared.workspace = true

# All for tokenfactory
osmosis-std-derive = "0.13.2"
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }
prost = {version = "0.11.0", default-features = false, features = ["prost-derive"]}
prost-types = {version = "0.11.1", default-features = false}