[package]
name = "ve3-voting-escrow"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true

exclude = [
    "contract.wasm",
    "hash.txt",
]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
library = []

[dependencies]
cw2.workspace = true
cw20.workspace = true
# cw20-base.workspace = true
cw-asset.workspace = true
cw-storage-plus.workspace = true
cw721.workspace = true
cw721-base.workspace = true
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
serde.workspace = true
schemars.workspace = true
thiserror.workspace = true
ve3-shared.workspace = true